WEBEX-278195 Migrate ITs onto dsb-test-framework  (#249)
* move local ITs onto dsb-test-framework

* move local ITs onto dsb-test-framework

* add & validate multiple diversion

* latest master

* dummy commit

* dummy commit 2